# ecom-churn-lakehouse

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  RUNBOOK.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/contracts/bronze/: orders.v1.json
data/contracts/gold/: customer_features_daily.v1.json
data/contracts/silver/: orders.v1.json
data/expectations/silver/: orders.yml
data/sample/: generate_orders_parquet.py
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md
services/api/: .dockerignore  Dockerfile
services/api/app/: main.py
services/api/app/auth/: api_key.py
services/api/app/feature_client/: local_latest_features.py
services/api/app/inference/: model_loader.py
services/api/app/observability/: logging.py
services/api/app/routers/: predict.py
services/api/app/schemas/: predict.py
services/api/tests/: test_predict_auth.py  test_predict_validation.py
src/common/: dq.py  pipeline_logging.py  spark.py  versioning.py
src/features/: customer_features_daily.py
src/ingestion/: orders_to_bronze.py
src/serving_features/: build_lastest_features.py  build_latest_features.py
src/training/: build_training_snapshot.py  labels.py  train_stub.py
src/transformations/: orders_bronze_to_silver.py
tests/: conftest.py
tests/contract/: test_bronze_orders_contract.py  test_silver_orders_contract.py
tests/integration/: test_slice_e2e.py
tests/unit/: test_customer_features_daily.py  test_silver_dedupe.py  test_versioning.py
