[project]
name = "ecomm-churn-lakehouse"
version = "0.1.0"
description = "Lakehouse-native e-commerce churn pipeline and FastAPI scoring service."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pandas>=2.2,<3.0",
  "pyarrow>=17,<21",
  "PyYAML>=6.0.1,<7.0",
  "pyspark==3.5.1",
  "delta-spark==3.2.0",
  "mlflow>=2.16,<3.0",
  "scikit-learn>=1.5,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "black>=24.8,<25.0",
  "httpx>=0.27,<1.0",
  "mypy>=1.11,<2.0",
  "pre-commit>=4.0,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "types-PyYAML>=6.0.12,<7.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
pretty = true
mypy_path = "."

[[tool.mypy.overrides]]
module = ["pyspark.*", "delta.*", "mlflow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests", "services/api/tests"]
markers = [
  "e2e: end-to-end slice test",
]
